# raw2features

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: INTEROP.md  MODALITIES.md  MODELS.md  MODEL_LICENSES.md  SEGMENTATION.md  SPEC.md  adding_a_model.md  usage.md
examples/: README.md  cohort.csv  extractions.yaml
notebooks/: .gitignore  01_quickstart.ipynb  02_visual_walkthrough.ipynb  03_the_embeddings_store.ipynb  04_spatialdata.ipynb  05_quality_control.ipynb  06_cohort_quality_control.ipynb  README.md
scripts/: codex_to_omezarr.py
slurm/: README.md  embed_array.sbatch  embed_cohort.sbatch  preflight.sh
src/raw2features/: __init__.py  __main__.py  data.py  spec.py  viz.py
src/raw2features/benchmark/: __init__.py  equivalence.py  profiler.py
src/raw2features/cli/: _validation.py  benchmark.py  embed.py  embed_many.py  export_h5.py  export_spatialdata.py  info.py  main.py  sample.py  slide_embed.py  thumbnail.py  validate_store.py  verify.py
src/raw2features/core/: __init__.py  config.py  device.py  geometry.py  mpp.py  plugins.py  provenance.py  qc.py  stain.py  store.py  uris.py
src/raw2features/embedders/: __init__.py  _hub.py  base.py  clip_hf_embedder.py  conch_embedder.py  conch_v1_5_embedder.py  convstem.py  dino_teacher_embedder.py  fingerprint.py  keep_embedder.py  kronos_embedder.py  model_registry.py  musk_embedder.py  open_clip_embedder.py  registry.yaml  seal_embedder.py  timm_embedder.py  torchvision_embedder.py  transformers_embedder.py  transforms.py
src/raw2features/export/: __init__.py  h5.py  spatialdata.py
src/raw2features/multiplex/: __init__.py  base.py  channelwise.py  registry.py
src/raw2features/patcher/: __init__.py  base.py  grid.py
src/raw2features/pipeline/: __init__.py  receipt.py  runner.py
src/raw2features/qc/: __init__.py  grandqc.py
src/raw2features/readers/: __init__.py  _http_store.py  base.py  omezarr.py
src/raw2features/schema/: __init__.py  embeddings_store-0.1.schema.json
src/raw2features/segmenters/: __init__.py  base.py  canny.py  combined.py  grandqc.py  nuclear.py  otsu.py
src/raw2features/sinks/: __init__.py  base.py  zarr_sink.py
src/raw2features/slide_embedders/: base.py  chief.py  encoding.py  feather.py  gigapath_slide.py  madeleine.py  model_registry.py  pool.py  prism.py  tangle.py  titan.py
tests/: conftest.py  test_additive_embed.py  test_benchmark.py  test_block_reads.py  test_channelwise_runner.py  test_channelwise_strategy.py  test_cli_commands.py  test_compile.py  test_conch.py  test_config.py  test_config_integrity.py  test_coordinate_frame.py  test_ctranspath.py  test_device.py  test_dino_teachers.py  test_e2e_real_slide.py  test_embed_many.py  test_embedder_forward.py  test_embedder_registry.py  test_examples.py  test_export_h5.py  test_export_spatialdata.py  test_gigapath_flash.py  test_h0_mini.py  test_hub_pinning.py  test_keep.py  test_loader_revision_pinning.py  test_midnight.py  test_mpp.py  test_multi_gpu.py  test_multiplex.py  test_output_fingerprints.py  test_patcher.py  test_pixel_and_resample_correctness.py  test_plugins.py  test_provenance.py  test_public_api.py  test_qc.py  test_qc_runner.py  test_read_capped.py  (+21 more)
